<resources>
    <string name="app_name">MyHome</string>
    <string name="namaPT">PT. Rowinda Tiara Abadi</string>
    <string name="slogan">Miliki Segera\nRumah Impian\nDan Nyaman\nDisini</string>
    <string name="sigin">Masuk</string>
    <string name="newaccount">Akun Baru</string>
    <string name="username_label">Nama Pengguna</string>
    <string name="pricelabel">Biaya Booking</string>
    <string name="slot">Slot Booking Yang Tersedia</string>
    <string name="slot2">Jumlah Slot</string>
    <string name="password_label">Kata Sandi</string>
    <string name="certificatelabel">Jenis Sertifikat</string>
    <string name="email_label">Alamat Email</string>
    <string name="Term">Ketentuan</string>
    <string name="createaccount">Buat Akun Baru</string>
    <string name="register_inst">Mohon isi form yang diminta \ndibawah ini</string>
    <string name="selfie_ins">Biarkan kami mengenali \nanda lebih baik</string>
    <string name="label_continue">Lanjutkan</string>
    <string name="label_update">Perbaharui</string>
    <string name="selfie_time">Pasang Foto Profil</string>
    <string name="EditProfile">Ubah Profil</string>
    <string name="EditProfileUser">Ubah Profil User</string>
    <string name="EditProfileDesc">Gunakanlah informasi\nyang sebenarnya.</string>
    <string name="EditProfileUserDesc">Anda dapat mengubah \nprofil dibawah ini.</string>
    <string name="name_label">Nama Lengkap</string>
    <string name="bio_label">Bio</string>
    <string name="level_label">Level Pengguna*</string>
    <string name="informationgraha">Informasi Setelah Booking</string>
    <string name="level_labeldesc">*(1=Admin, 2=Marketing,3=Pelanggan)</string>
    <string name="success_register">Pendaftaran Berhasil</string>
    <string name="success_booking">Booking Berhasil</string>
    <string name="label_successregister">Selamat bergabung pada MyHome\nAnda dapat melanjutkan\ndengan tombol dibawah</string>
    <string name="label_successbooking">Akan kami teruskan ke TIM kami yang terkait untuk proses selanjutnya.</string>
    <string name="start">Mulai</string>
    <string name="showhistory">Lihat Riwayat</string>
    <string name="mydashboard">Beranda</string>
    <string name="MarketingPanel">Panel Marketing</string>
    <string name="adminpanel">Panel Admin</string>
    <string name="mainmenus">Menu Utama</string>
    <string name="userlist">Daftar Pengguna</string>
    <string name="grahalist">Daftar Graha</string>
    <string name="topupmenu">Menu TopUp Saldo</string>
    <string name="grahamenu">Menu Manajemen Graha</string>
    <string name="captmainmenus">Selamat datang di menu utama MyHome</string>
    <string name="userlistdesc">Silahkan pilih pengguna dibawah ini yang ingin anda atur</string>
    <string name="userlistdesc2">Silahkan pilih pengguna dibawah ini yang ingin anda isi saldo</string>
    <string name="grahalistdesc">Silahkan pilih Graha dibawah ini yang akan di manajemen.</string>
    <string name="BookingMenu">Riwayat Booking</string>
    <string name="Graha2">Graha Robeto</string>
    <string name="Graha1">Graha Winda</string>
    <string name="ManageGraha">Atur Graha</string>
    <string name="TopUpUser">Tambah Saldo User</string>
    <string name="TopUpNow">Tambah Saldo</string>
    <string name="TopUpPrice">Jumlah Tambah Saldo</string>
    <string name="settingacc">Pengaturan Akun</string>
    <string name="adstitle">Jelajahi MyHome</string>
    <string name="adssubtitle">Pantau pembaharuan terkini dari kami</string>
    <string name="graha_detail">Detail Perumahan</string>
    <string name="capt_detail_graha">Lihat lebih detail tentang perumahan ini</string>
    <string name="SHM_capt">Sertifikat Hak Milik (SHM)</string>
    <string name="Key">Terima Kunci</string>
    <string name="KeyCapt">Cukup dengan bayar DP saja</string>
    <string name="SHM">Jenis Sertifikat</string>
    <string name="Location">Lokasi Yang Strategis</string>
    <string name="PriceLabel">Harga Booking</string>
    <string name="LocationCapt">Jl. Teropong No.A1, Pekanbaru</string>
    <string name="LabelBookingBTN">BOOKING</string>
    <string name="AddBooking">BOOKING RUMAH</string>
    <string name="CheckBooking">Mohon cek terlebih dahulu rumah yang ingin anda Booking</string>
    <string name="WindaDesc">Luas Tanah 140 , Listrik 1300 Watt, Sumber Air Sumur Bor, Keramik 40.
Info lanjut bisa langsung hubungi maketing kami.</string>
    <string name="typerumah">Perumahan Type 36</string>
    <string name="CheckoutDesc">Untuk biaya yang lainnya dapat diselesaikan langsung dengan tim Marketing kami.</string>
    <string name="Price">Harga</string>
    <string name="CurrentBalance">Total Saldo Anda</string>
    <string name="TotalPrice">Total Biaya</string>
    <string name="LabelCheckOutBTN">BAYAR</string>
    <string name="Dashboard">Beranda</string>
    <string name="Username">Nama Pengguna</string>
    <string name="Status">Status</string>
    <string name="Email_address">Alamat Email</string>
    <string name="List_Booking">Daftar Booking Saya</string>
    <string name="List_Booking_desc">Berikut adalah riwayat booking saya</string>
    <string name="my_balance">Saldo Saya</string>
    <string name="marketing_menus">Menu Marketing</string>
    <string name="SignOut">Keluar</string>
    <string name="BookingDetail">Rincian Booking</string>
    <string name="Date">Tanggal</string>
    <string name="Time">Jam</string>
    <string name="Information">Informasi</string>
    <string name="CancelBooking">Batalkan Booking</string>
</resources>
