<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradientprimarygreen"
    tools:context=".SigninAct">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="312dp"
        android:layout_height="160dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/applogodark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_editor_absoluteY="125dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textColor="@color/GrayPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/xusername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_inputedit"
                android:fontFamily="@font/mmedium"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/GrayPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/xpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_inputedit"
                android:fontFamily="@font/mmedium"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_buttonsignin"
            android:fontFamily="@font/mmedium"
            android:text="@string/sigin"
            android:textColor="#FFF"
            android:textSize="20sp" />
        <ProgressBar
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/progressBar"
            android:layout_width="54dp"
            android:layout_height="54dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/mlight"
        android:text="@string/createaccount"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>