<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".GrahaDetail">

    <ImageView
        android:id="@+id/header_graha_detail"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_graha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mregular"
        android:text=".........."
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_graha_detail" />

    <TextView
        android:id="@+id/type_rumah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mlight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="9dp"
        android:text=".........."
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_graha" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_rumah">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/graha_detail"
            android:textColor="@color/blackPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:text="@string/capt_detail_graha"
            android:textColor="@color/GrayPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/grayline" />

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/icon_shm"
                android:layout_width="55dp"
                android:layout_height="55dp"/>

            <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:text="@string/SHM"
                    android:textColor="@color/blackPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/jenis_sertifikat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text=".........."
                    android:textColor="@color/GrayPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/icon_kunci"
                android:layout_width="55dp"
                android:layout_height="55dp"/>

            <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:text="@string/Key"
                    android:textColor="@color/blackPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/KeyCapt"
                    android:textColor="@color/GrayPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/icon_location"
                android:layout_width="55dp"
                android:layout_height="55dp"/>

            <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:text="@string/Location"
                    android:textColor="@color/blackPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text=".........."
                    android:textColor="@color/GrayPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_graha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:lineSpacingExtra="8dp"
            android:text=".........."
            android:textColor="@color/GrayPrimary"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_backbtn"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_booking"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_buttonsignin"
                android:fontFamily="@font/mmedium"
                android:text="@string/LabelBookingBTN"
                android:textColor="#FFF"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>