<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".BookingHistoryAct">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_gradientprimarygreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/nama_lengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mmedium"
        android:text="Riwayat Booking"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_mydashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_lengkap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/List_Booking"
            android:textColor="@color/blackPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:text="@string/List_Booking_desc"
            android:textColor="@color/GrayPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/grayline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mybooking_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mydashboard"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_buttongreenprimary"
        android:fontFamily="@font/mmedium"
        android:text="@string/Dashboard"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>